changed infos in Social and Projects

--- a/index.html
+++ b/index.html
@@ -654,14 +654,14 @@
 
           <div class="col-lg-3 col-md-6">
             <div class="stats-item text-center w-100 h-100">
-              <span data-purecounter-start="0" data-purecounter-end="8" data-purecounter-duration="3" class="purecounter"></span>
+              <span data-purecounter-start="0" data-purecounter-end="10" data-purecounter-duration="3" class="purecounter"></span>
               <p>Participants</p>
             </div>
           </div><!-- End Stats Item -->
 
           <div class="col-lg-3 col-md-6">
             <div class="stats-item text-center w-100 h-100">
-              <span data-purecounter-start="0" data-purecounter-end="8" data-purecounter-duration="3" class="purecounter"></span>
+              <span data-purecounter-start="0" data-purecounter-end="10" data-purecounter-duration="3" class="purecounter"></span>
               <p>Organizers</p>
             </div>
           </div><!-- End Stats Item -->
@@ -789,6 +789,8 @@
 
           </div>
         </div><!-- Project Item -->
+
+        <hr>
 
         <div class="row gy-4 align-items-center projects-item">
           <div class="col-lg-6 d-flex justify-content-center flex-column" data-aos="fade-up">
@@ -1151,8 +1153,8 @@
             <article>
 
               <div class="row justify-content-center">
-                <a class="twitter-timeline" data-theme="bright" data-height="10000" data-width="1800" href="https://twitter.com/BrainhackM?ref_src=twsrc%5Etfw">Tweets by Brainhack Marseille</a> 
-                <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+                <!-- <a class="twitter-timeline" href="https://twitter.com/BrainHackLucca?ref_src=twsrc%5Etfw">Tweets by BrainHackLucca</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>  -->
+                <a class="twitter-timeline" data-lang="en" data-width="600" data-height="800" data-dnt="true" data-theme="dark" href="https://twitter.com/BrainHackLucca?ref_src=twsrc%5Etfw">Tweets by BrainHackLucca</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script> 
               </div>
 
             </article>
