--- a/index.html
+++ b/index.html
@@ -1161,7 +1161,7 @@
 
           </div><!-- End post list item -->
 
-          <div class="col-xl-6 col-md-6" data-aos="fade-up" data-aos-delay="300">
+          <!-- <div class="col-xl-6 col-md-6" data-aos="fade-up" data-aos-delay="300">
             <article>
 
               <div class="row justify-content-center">
@@ -1171,7 +1171,7 @@
               </div>
 
             </article>
-          </div><!-- End post list item -->
+          </div> --><!-- End post list item -->
 
         </div><!-- End recent posts list -->
 
