--- a/index.html
+++ b/index.html
@@ -1161,17 +1161,16 @@
 
           </div><!-- End post list item -->
 
-          <!-- <div class="col-xl-6 col-md-6" data-aos="fade-up" data-aos-delay="300">
+          <div class="col-xl-6 col-md-6" data-aos="fade-up" data-aos-delay="300">
             <article>
 
               <div class="row justify-content-center">
                 <blockquote class="instagram-media" data-theme="dark" data-instgrm-permalink="https://www.instagram.com/BrainHackLucca/" data-instgrm-version="12" id="main_link" href="rbasasasa">Posts by Brainhack Marseille</blockquote> 
                 <script src="https://www.instagram.com/embed.js"></script>
-                <script type="text/javascript" src="https://www.embedista.com/j/instagramfeed.js"></script>
               </div>
 
             </article>
-          </div> --><!-- End post list item -->
+          </div> <!-- End post list item -->
 
         </div><!-- End recent posts list -->
 
