--- a/index.html
+++ b/index.html
@@ -28,13 +28,6 @@
   <!-- Template Main CSS File -->
   <link href="assets/css/main.css" rel="stylesheet">
 
-  <!-- =======================================================
-  * Template Name: Append
-  * Updated: Aug 30 2023 with Bootstrap v5.3.1
-  * Template URL: https://bootstrapmade.com/append-bootstrap-website-template/
-  * Author: BootstrapMade.com
-  * License: https://bootstrapmade.com/license/
-  ======================================================== -->
 </head>
 
 <body class="index-page" data-bs-spy="scroll" data-bs-target="#navmenu">
@@ -61,9 +54,9 @@
           <li><a href="index.html#projects">Projects</a></li>
           <!-- <li><a href="index.html#portfolio">Portfolio</a></li> -->
           <li><a href="index.html#team">Team</a></li>
-          <li><a href="index.html#faq">Serivces</a></li>
+          <li><a href="index.html#faq">Services</a></li>
           <li><a href="index.html#recent-posts">Social</a></li>
-          <li><a href="index.html#contact">Contacs</a></li>
+          <li><a href="index.html#contact">Contacts</a></li>
           <!-- <li class="dropdown has-dropdown"><a ><span>Dropdown</span> <i class="bi bi-chevron-down"></i></a>
             <ul class="dd-box-shadow">
               <li><a href="#">Dropdown 1</a></li>
@@ -769,7 +762,16 @@
         Projects can be anything you'd like to work on during the event with other people (coding, discussing a procedure with coworkers, brainstorming about a new idea), as long as you're ready to minimally organize this! </p>
       </div><!-- End Section Title -->
 
+      <div class="container submit d-flex flex-column align-items-center">
+        <button>
+          <a href="">Submit a Project</a>
+        </button>
+        <p>Fill the GitHub issue!</p>
+      </div>
+
       <div class="container">
+
+        <hr>
 
         <div class="row gy-4 align-items-stretch justify-content-between projects-item ">
           <div class="col-lg-5 d-flex align-items-center projects-img-bg" data-aos="zoom-out">
@@ -822,7 +824,7 @@
       <!--  Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>Team</h2>
-        <p>Necessitatibus eius consequatur ex aliquid fuga eum quidem sint consectetur velit</p>
+        <p>The BrainHack Lucca organizing committee</p>
       </div><!-- End Section Title -->
 
       <div class="container">
@@ -1165,7 +1167,7 @@
             <article>
 
               <div class="row justify-content-center">
-                <blockquote class="instagram-media" data-theme="dark" data-instgrm-permalink="https://www.instagram.com/BrainHackLucca/" data-instgrm-version="12" id="main_link" href="rbasasasa">Posts by Brainhack Marseille</blockquote> 
+                <blockquote class="instagram-media" data-theme="dark" data-instgrm-permalink="https://www.instagram.com/BrainHackLucca/" data-instgrm-version="12" id="main_link" href="brainhacklucca">Posts by Brainhack Marseille</blockquote> 
                 <script src="https://www.instagram.com/embed.js"></script>
               </div>
 
@@ -1183,15 +1185,15 @@
 
       <!--  Section Title -->
       <div class="container section-title" data-aos="fade-up">
-        <h2>Contact</h2>
-        <p>Necessitatibus eius consequatur ex aliquid fuga eum quidem sint consectetur velit</p>
+        <h2>Contacts</h2>
+        <p>Any question? Write us a message!</p>
       </div><!-- End Section Title -->
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
 
         <div class="row">
 
-          <div class="col-lg-6">
+          <div class="col-lg-6 col-md-6 d-flex">
 
             <div class="container">
               <div class="venue-map">
@@ -1239,7 +1241,7 @@
             </div>
 
           <div class="col-lg-6">
-            <form action="forms/contact.php" method="post" class="php-email-form" data-aos="fade-up" data-aos-delay="200">
+            <form action="forms/mail.php" method="post" class="php-email-form" data-aos="fade-up" data-aos-delay="200">
               <div class="row gy-4">
 
                 <div class="col-md-6">
@@ -1295,8 +1297,8 @@
           <p>Thank you for visiting our website, we hope you found the initiative interesting and to see you soon!</p>
           <div class="social-links d-flex mt-4">
             <a href="https://github.com/brainhacklucca" target="_blank"><i class="bi bi-github"></i></a>
-            <a href=""><i class="bi bi-twitter"></i></a>
-            <a href=""><i class="bi bi-instagram"></i></a>
+            <a href="https://twitter.com/BrainHackLucca" target="_blank"><i class="bi bi-twitter"></i></a>
+            <a href="https://www.instagram.com/BrainHackLucca/" target="_blank"><i class="bi bi-instagram"></i></a>
             <!-- <a href=""><i class="bi bi-linkedin"></i></a> -->
           </div>
         </div>
