general bugs fix

--- a/index.html
+++ b/index.html
@@ -1191,13 +1191,13 @@
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
 
-        <div class="row">
+        <div class="row gy-4">
 
           <div class="col-lg-6 col-md-6 d-flex">
 
             <div class="container">
               <div class="venue-map">
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2877.496702777357!2d10.508239476687354!3d43.8455326399694!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x12d583f3ba4463ed%3A0xa7eaa7ee6fc5a9f9!2sScuola%20IMT%20Alti%20Studi%20Lucca!5e0!3m2!1sit!2sit!4v1694532362857!5m2!1sit!2sit" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2877.496702777357!2d10.508239476687354!3d43.8455326399694!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x12d583f3ba4463ed%3A0xa7eaa7ee6fc5a9f9!2sScuola%20IMT%20Alti%20Studi%20Lucca!5e0!3m2!1sit!2sit!4v1694532362857!5m2!1sit!2sit" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
               </div>  
             </div>
 
