--- a/index.html
+++ b/index.html
@@ -683,7 +683,7 @@
             <div class="register-btn align-items-center justify-content-center d-flex">
               <!-- <div class="icon align-items-left"><a href="" target="_blank"><i class="bi bi-card-checklist"></i></a></div> -->
               <div class="d-flex flex-column align-items-center">
-                <h4 class="title reg-btn" title="Registration will be open soon!"><a href="#register" target="_blank" class="stretched-link">Register</a></h4>
+                <h4 class="title reg-btn" title="Registration will be open soon!"><a href="https://forms.gle/qvCD6tmfA88HmyoBA" target="_blank" class="stretched-link">Register</a></h4>
                 <p class="description">Register now using the google form!</p>
               </div>
             </div>
