--- a/index.html
+++ b/index.html
@@ -764,7 +764,7 @@
 
       <div class="container submit d-flex flex-column align-items-center">
         <button>
-          <a href="https://github.com/brainhacklucca/brainhacklucca.github.io/issues/new?assignees=&labels=project&projects=&template=brainhack-project-template-2023.yml">Submit a Project</a>
+          <a href="https://github.com/brainhacklucca/brainhacklucca.github.io/issues/new?assignees=&labels=project&projects=&template=brainhack-project-template-2023.yml" target="_blank">Submit a Project</a>
         </button>
         <p>Fill the GitHub issue!</p>
       </div>
