--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
                     <img class="img-fluid" src="images/logo/BHGlobal.png"></img>
                   </a>
                   <h3>BrainHack Global</h3>
-                  <p>Magni repellendus vel ullam hic officia accusantium ipsa dolor omnis dolor voluptatem</p>
+                  <p>The world-wide organization that helps with the organization of local events</p>
                 </div>
               </div> <!-- End Icon Box -->
 
@@ -211,7 +211,7 @@
                     <img class="img-fluid" src="images/logo/BHMarseille.png"></img>
                   </a>
                   <h3>BrainHack Marseille</h3>
-                  <p>Autem saepe animi et aut aspernatur culpa facere. Rerum saepe rerum voluptates quia</p>
+                  <p>A long experienced BrainHack local event partening with us for BH 2023</p>
                 </div>
               </div> <!-- End Icon Box -->
 
@@ -1075,7 +1075,7 @@
                       <li><a href="https://maps.app.goo.gl/beVFaMcxPsJsVQrC9" target="_blank">Osteria Baralla</a></li>
                       <li><a href="https://maps.app.goo.gl/zCtfsyhxvZcssCnV6" target="_blank">Trattoria da Giulio</a></li>
                     </ul>
-                    As an alternative, you can eaily find around the city lots of spots to eat sandwiches, pizza and stuffed 'focaccia'.
+                    As an alternative, you can easily find around the city lots of spots to eat sandwiches, pizza and stuffed 'focaccia'.
                   </p>
                 </div>
                 <i class="faq-toggle bi bi-chevron-right"></i>
