--- a/index.html
+++ b/index.html
@@ -1186,7 +1186,10 @@
       <!--  Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>Contacts</h2>
-        <p>Any question? Write us a message!</p>
+        <p>
+          Any question? Write us a message!<br>
+          You can find more information about the school and how to reach us following <a href="https://www.imtlucca.it/it/campus-and-services/dove-siamo" target="_blank" style="color: blue; font-weight: bold;">THIS LINK</a>.
+        </p>
       </div><!-- End Section Title -->
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
