cleaning and added infos

--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
   <header id="header" class="header fixed-top d-flex align-items-center">
     <div class="container-fluid align-items-center justify-content-center">
 
-      <a href="https://www.imtlucca.it/" target="_blank" class="logo d-flex align-items-left me-auto me-xl-0">
+      <a href="https://www.imtlucca.it/" target="_blank">
         <!-- Uncomment the line below if you also wish to use an image logo -->
-        <img src="images/logo/logo_imt.png" alt="">
+        <img src="images/logo/logo_imt.png" class="imtlogo">
         <!-- <h1>Append</h1> -->
         <!-- <span>.</span> -->
       </a>
@@ -146,8 +146,8 @@
         <div class="row align-items-center justify-content-center">
 
           <div class="col-xl-2 col-md-3 col-6 client-logo">
-            <a href="https://momilab.imtlucca.it/" target="_blank">
-              <img src="images/contributors/momilab.png" class="img-fluid" alt="MoMiLab">
+            <a href="https://momilab.imtlucca.it/research/semper" target="_blank">
+              <img src="images/contributors/semper.png" class="img-fluid" alt="MoMiLab">
             </a>
           </div><!-- End Client Item -->
 
@@ -835,11 +835,9 @@
             <div class="member-img">
               <img src="images/team/DC.jpeg" class="img-fluid" alt="">
               <div class="social">
-                <a href="#"><i class="bi bi-twitter"></i></a>
-                <a href="#"><i class="bi bi-facebook"></i></a>
-                <a href="#"><i class="bi bi-instagram"></i></a>
-                <a href="#"><i class="bi bi-linkedin"></i></a>
-                <a href="#"><i class="bi bi-github"></i></a>
+                <a href="https://www.davidecoraci.com/welcome.php" target="_blank"><i class="bi bi-person-circle"></i></a>
+                <a href="https://github.com/davidecrc" target="_blank"><i class="bi bi-github"></i></a>
+                <a href="https://twitter.com/Dav_crc" target="_blank"><i class="bi bi-twitter"></i></a>
               </div>
             </div>
             <div class="member-info text-center">
@@ -955,10 +953,9 @@
             <div class="member-img">
               <img src="images/team/RB.jpeg" class="img-fluid" alt="">
               <div class="social">
-                <a href="#"><i class="bi bi-twitter"></i></a>
-                <a href="#"><i class="bi bi-facebook"></i></a>
-                <a href="#"><i class="bi bi-instagram"></i></a>
-                <a href="#"><i class="bi bi-linkedin"></i></a>
+                <a href="https://github.com/StanSStanman" target="_blank"><i class="bi bi-github"></i></a>
+                <a href="https://twitter.com/rbasasasa" target="_blank"><i class="bi bi-twitter"></i></a>
+                <a href="https://www.instagram.com/rbasasasa/" target="_blank"><i class="bi bi-instagram"></i></a>
               </div>
             </div>
             <div class="member-info text-center">
@@ -992,7 +989,7 @@
                 <a href="#"><i class="bi bi-twitter"></i></a>
                 <a href="#"><i class="bi bi-facebook"></i></a>
                 <a href="#"><i class="bi bi-instagram"></i></a>
-                <a href="#"><i class="bi bi-linkedin"></i></a>
+                <a href="#"><i class="bi bi-r-square-fill"></i></a>
               </div>
             </div>
             <div class="member-info text-center">
