added contributor logo

--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
 
           <div class="col-xl-2 col-md-3 col-6 client-logo">
             <a href="https://momilab.imtlucca.it/research/semper" target="_blank">
-              <img src="images/contributors/semper.png" class="img-fluid" alt="MoMiLab">
+              <img src="images/contributors/semper.png" class="img-fluid" alt="SEMper">
             </a>
           </div><!-- End Client Item -->
 
