--- a/index.html
+++ b/index.html
@@ -851,10 +851,10 @@
             <div class="member-img">
               <img src="images/team/GA.jpg" class="img-fluid" alt="">
               <div class="social">
-                <a href="#"><i class="bi bi-twitter"></i></a>
+                <!-- <a href="#"><i class="bi bi-twitter"></i></a>
                 <a href="#"><i class="bi bi-facebook"></i></a>
                 <a href="#"><i class="bi bi-instagram"></i></a>
-                <a href="#"><i class="bi bi-linkedin"></i></a>
+                <a href="#"><i class="bi bi-linkedin"></i></a> -->
               </div>
             </div>
             <div class="member-info text-center">
@@ -868,10 +868,10 @@
             <div class="member-img">
               <img src="images/team/GH.jpg" class="img-fluid" alt="">
               <div class="social">
-                <a href="#"><i class="bi bi-twitter"></i></a>
+                <!-- <a href="#"><i class="bi bi-twitter"></i></a>
                 <a href="#"><i class="bi bi-facebook"></i></a>
                 <a href="#"><i class="bi bi-instagram"></i></a>
-                <a href="#"><i class="bi bi-linkedin"></i></a>
+                <a href="#"><i class="bi bi-linkedin"></i></a> -->
               </div>
             </div>
             <div class="member-info text-center">
@@ -885,10 +885,10 @@
             <div class="member-img">
               <img src="images/team/GL.jpg" class="img-fluid" alt="">
               <div class="social">
-                <a href="#"><i class="bi bi-twitter"></i></a>
+                <!-- <a href="#"><i class="bi bi-twitter"></i></a>
                 <a href="#"><i class="bi bi-facebook"></i></a>
                 <a href="#"><i class="bi bi-instagram"></i></a>
-                <a href="#"><i class="bi bi-linkedin"></i></a>
+                <a href="#"><i class="bi bi-linkedin"></i></a> -->
               </div>
             </div>
             <div class="member-info text-center">
@@ -902,10 +902,10 @@
             <div class="member-img">
               <img src="images/team/LF.jpeg" class="img-fluid" alt="">
               <div class="social">
-                <a href="#"><i class="bi bi-twitter"></i></a>
+                <!-- <a href="#"><i class="bi bi-twitter"></i></a>
                 <a href="#"><i class="bi bi-facebook"></i></a>
                 <a href="#"><i class="bi bi-instagram"></i></a>
-                <a href="#"><i class="bi bi-linkedin"></i></a>
+                <a href="#"><i class="bi bi-linkedin"></i></a> -->
               </div>
             </div>
             <div class="member-info text-center">
@@ -919,10 +919,10 @@
             <div class="member-img">
               <img src="images/team/LS.png" class="img-fluid" alt="">
               <div class="social">
-                <a href="#"><i class="bi bi-twitter"></i></a>
+                <!-- <a href="#"><i class="bi bi-twitter"></i></a>
                 <a href="#"><i class="bi bi-facebook"></i></a>
                 <a href="#"><i class="bi bi-instagram"></i></a>
-                <a href="#"><i class="bi bi-linkedin"></i></a>
+                <a href="#"><i class="bi bi-linkedin"></i></a> -->
               </div>
             </div>
             <div class="member-info text-center">
@@ -936,10 +936,10 @@
             <div class="member-img">
               <img src="images/team/MB.jpg" class="img-fluid" alt="">
               <div class="social">
-                <a href="#"><i class="bi bi-twitter"></i></a>
+                <!-- <a href="#"><i class="bi bi-twitter"></i></a>
                 <a href="#"><i class="bi bi-facebook"></i></a>
                 <a href="#"><i class="bi bi-instagram"></i></a>
-                <a href="#"><i class="bi bi-linkedin"></i></a>
+                <a href="#"><i class="bi bi-linkedin"></i></a> -->
               </div>
             </div>
             <div class="member-info text-center">
@@ -969,10 +969,10 @@
             <div class="member-img">
               <img src="images/team/TG.jpg" class="img-fluid" alt="">
               <div class="social">
-                <a href="#"><i class="bi bi-twitter"></i></a>
+                <!-- <a href="#"><i class="bi bi-twitter"></i></a>
                 <a href="#"><i class="bi bi-facebook"></i></a>
                 <a href="#"><i class="bi bi-instagram"></i></a>
-                <a href="#"><i class="bi bi-linkedin"></i></a>
+                <a href="#"><i class="bi bi-linkedin"></i></a> -->
               </div>
             </div>
             <div class="member-info text-center">
@@ -986,10 +986,10 @@
             <div class="member-img">
               <img src="images/team/VE.jpeg" class="img-fluid" alt="">
               <div class="social">
-                <a href="#"><i class="bi bi-twitter"></i></a>
+                <!-- <a href="#"><i class="bi bi-twitter"></i></a>
                 <a href="#"><i class="bi bi-facebook"></i></a>
                 <a href="#"><i class="bi bi-instagram"></i></a>
-                <a href="#"><i class="bi bi-r-square-fill"></i></a>
+                <a href="#"><i class="bi bi-r-square-fill"></i></a> -->
               </div>
             </div>
             <div class="member-info text-center">
