changed logo for 2023, dim fix

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 
         <div class="row">
           <div class="col-xl-5 col-lg-5 hero-img" data-aos="fade-up" data-aos-delay="300">
-            <img src="images/logo/logo_temp_cut_dark.png" alt="">
+            <img src="images/logo/BHLucca.png" alt="BrainHack Lucca">
           </div>
         </div>
 
