--- a/index.html
+++ b/index.html
@@ -766,14 +766,14 @@
         <button>
           <a href="https://github.com/brainhacklucca/brainhacklucca.github.io/issues/new?assignees=&labels=project&projects=&template=brainhack-project-template-2023.yml" target="_blank">Submit a Project</a>
         </button>
-        <p>Fill the GitHub issue!</p>
+        <p>Click to submit a project filling a GitHub issue template!</p>
       </div>
 
       <div class="container">
 
         <hr>
 
-        <div class="row gy-4 align-items-stretch justify-content-between projects-item ">
+        <!-- <div class="row gy-4 align-items-stretch justify-content-between projects-item ">
           <div class="col-lg-5 d-flex align-items-center projects-img-bg" data-aos="zoom-out">
             <img src="images/projects/project_example.jpeg" class="img-fluid" alt="">
           </div>
@@ -790,11 +790,11 @@
             </div>
 
           </div>
-        </div><!-- Project Item -->
+        </div> --><!-- Project Item -->
 
         <hr>
 
-        <div class="row gy-4 align-items-center projects-item">
+       <!--  <div class="row gy-4 align-items-center projects-item">
           <div class="col-lg-6 d-flex justify-content-center flex-column" data-aos="fade-up">
             <h3>Other Project</h3>
             <p>
@@ -812,7 +812,7 @@
           <div class="col-lg-5 d-flex align-items-center projects-img-bg" data-aos="zoom-out">
             <img src="images/projects/project_example.jpeg" class="img-fluid" alt="">
           </div>
-        </div><!-- Project Item -->
+        </div> --><!-- Project Item -->
 
       </div>
 
