--- a/index.html
+++ b/index.html
@@ -773,24 +773,38 @@
 
         <hr>
 
-        <!-- <div class="row gy-4 align-items-stretch justify-content-between projects-item ">
+        <div class="row gy-4 align-items-stretch justify-content-between projects-item ">
           <div class="col-lg-5 d-flex align-items-center projects-img-bg" data-aos="zoom-out">
-            <img src="images/projects/project_example.jpeg" class="img-fluid" alt="">
+            <img src="images/projects/project1.jpeg" class="img-fluid" alt="">
           </div>
 
           <div class="col-lg-6 d-flex justify-content-center flex-column" data-aos="fade-up">
-            <h3>Burnout</h3>
-            <p>By any PhD student in the world</p>
+            <h3><a href="https://github.com/brainhacklucca/brainhacklucca.github.io/issues/1" target="_blank">Brain-machine interface: a closed loop system for brain signal driven stimulation delivery.</a></h3>
+            <p>By Ruggero Basanisi & Monica Betta</p>
             <a class="btn btn-get-started align-self-start" type="button" data-bs-toggle="collapse" data-bs-target="#collapse_prj1">Description</a>
 
             <div class="collapse" id='collapse_prj1'>
               <p>
-                These are some random sentences on how PhD life is stressfull and absolutely not rewarding at all. 
+                <br>
+                Among other uses in neuroscience research, brain-machine interface systems are extensively used in sleep studies to deliver stimuli in response to the detection of salient brain signals (Bellesi et al. 2014, Fehér et al. 2021). In particular, we're interested in building a closed-loop protocol able to simultaneously register and monitor the EEG activity, recognize sleep slow waves (0.5 - 4 Hz), and deliver a stimulus with the finest possible time precision within a predetermined phase of the oscillation. The aim for the brainhack is to group together with different experts to tackle the deriving conceptual and computational issues, to finally create a publicly available small Python package containing a subset of functions to implement the closed-loop protocol.
+                <br>
+                <br>
+                <b>Goals for the BrainHack:</b>
+                <br>
+                This project presents several non-trivial issues that should be addressed, during the brainhack we will mainly focus on three points:
+                <ul>
+                  <li>Chose and implementation of the algorithm for online slow wave detection</li>
+                  <li>Testing the slow wave detection algorithm on data (offline)</li>
+                  <li>Testing and improving the EEG algorithm for recording and monitoring brain signals, its integration with the detection algorithm and with stimulation delivery (online)</li>
+                </ul>
+                <b>Contributors' skills:</b>
+                <br>
+                Contributors can participate in different ways, helping us brainstorming on conceptual problems to figure out a valid strategy to achieve the scope, or actively programming algorithms and testing functions.Some of these skills can be useful to participate: EEG signal processing, machine/deep learning, python programming, control system.
               </p>
             </div>
 
           </div>
-        </div> --><!-- Project Item -->
+        </div><!-- Project Item -->
 
         <hr>
 
