--- a/index.html
+++ b/index.html
@@ -671,8 +671,8 @@
       <!--  Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>Register</h2>
-        <p>Registration <b>will be open soon</b>.</p>
-        <!-- <p>Registration will be <b>open until 27/11/2023</b>.</p> -->
+        <p>Registration <b>is now open!</b></p>
+        <p>Registration will be <b>open until 26/11/2023</b>.</p>
       </div><!-- End Section Title -->
 
       <div class="container">
