--- a/index.html
+++ b/index.html
@@ -672,7 +672,7 @@
       <div class="container section-title" data-aos="fade-up">
         <h2>Register</h2>
         <p>Registration <b>is now open!</b></p>
-        <p>Registration will be <b>open until 26/11/2023</b>.</p>
+        <p>Registration will be <b>open until 15/11/2023</b>.</p>
       </div><!-- End Section Title -->
 
       <div class="container">
@@ -804,29 +804,52 @@
             </div>
 
           </div>
-        </div><!-- Project Item -->
+        </div><!-- Project Item LEFT-->
 
         <hr>
 
-       <!--  <div class="row gy-4 align-items-center projects-item">
+        <div class="row gy-4 align-items-center projects-item">
           <div class="col-lg-6 d-flex justify-content-center flex-column" data-aos="fade-up">
-            <h3>Other Project</h3>
+            <h3><a href="https://github.com/brainhacklucca/brainhacklucca.github.io/issues/2" target="_blank">NeuroInfer</a></h3>
             <p>
-              by Another Person
+              by Davide Coraci & Matteo Lionello
             </p>
             <a class="btn btn-get-started align-self-start" type="button" data-bs-toggle="collapse" data-bs-target="#collapse_prj2">Description</a>
 
             <div class="collapse" id='collapse_prj2'>
               <p>
-                These are some random sentences on how PhD life is stressfull and absolutely not rewarding at all. 
+                <br>
+                NeuroInfer (NI) is a tool for drawing Bayesian inferences on the associations between cognitive processes and brain activations based on meta-analytic data from fMRI published studies. In a nutshell, it allows neuroscientists to interpret their results and assess the reliability of their hypotheses.
+                <br>
+                Compared to available tools (e.g., NeuroSynth, NeuroQuery, BACON), NI implements a more sophisticated Bayesian analysis (based on Bayesian confirmation theory).
+                Up to date, the NI framework includes a database of published fMRI studies and related metadata (updated in 2018 and shared with NeuroSynth and NeuroQuery), a vocabulary of terms, and a Python-based algorithm to perform the analysis.
+                <br>
+                <br>
+                <b>Goals for the BrainHack:</b>
+                <br>
+                Our goal for the Brainhack 2023 is to develop the NueroInfer platform. In particular, we plan:
+                <ul>
+                  <li>to improve the python-based script at the core of the current version of NI.</li>
+                  <li>to develop a GUI for NI</li>
+                  <li>to realize a beta version of NI to upload on GitHub (and provide some useful tutorial)</li>
+                </ul>
+                <b>Contributors' skills:</b>
+                <br>
+                <ul>
+                  <li>expertise in python coding</li>
+                  <li>expertise with GUI development (optional)</li>
+                  <li>familiariy with neuroinformatics and related tools</li>
+                </ul>
               </p>
             </div>
 
           </div>
           <div class="col-lg-5 d-flex align-items-center projects-img-bg" data-aos="zoom-out">
-            <img src="images/projects/project_example.jpeg" class="img-fluid" alt="">
+            <img src="images/projects/project2.png" class="img-fluid" alt="">
           </div>
-        </div> --><!-- Project Item -->
+        </div><!-- Project Item RIGHT-->
+
+        <hr>
 
       </div>
 
@@ -1180,6 +1203,10 @@
               <div class="row justify-content-center">
                 <blockquote class="instagram-media" data-theme="dark" data-instgrm-permalink="https://www.instagram.com/BrainHackLucca/" data-instgrm-version="12" id="main_link" href="brainhacklucca">Posts by Brainhack Marseille</blockquote> 
                 <script src="https://www.instagram.com/embed.js"></script>
+
+                <!-- In case of emergency use this -->
+                <!-- <blockquote class="instagram-media" data-instgrm-captioned data-theme="dark" data-instgrm-permalink="https://www.instagram.com/BrainHackLucca/?utm_source=ig_embed&amp;utm_campaign=loading" data-instgrm-version="14" id="main_link"><a href="https://www.instagram.com/BrainHackLucca/" target="_blank">Posts by Brainhack Marseille</a></blockquote> 
+                <script async src="//www.instagram.com/embed.js"></script> -->
               </div>
 
             </article>
