--- a/index.html
+++ b/index.html
@@ -277,40 +277,40 @@
           <div role="tabpanel" class="col-lg-9 tab-pane fade show active" id="day-1">
 
             <div class="row schedule-item">
-              <div class="col-md-2"><time>09:30 AM</time></div>
+              <div class="col-md-2"><time>09:00 AM</time></div>
               <div class="col-md-10">
                 <div class="speaker">
                   <img src="images/program/breakfast.jpg" alt="Welcoming, coffee and delicacies">
                 </div>
                 <h4>Registration and breakfast</h4>
-                <p>Badges at ??? and coffee at ????</p>
+                <p>Badges at IMT school and coffee at ????</p>
               </div>
             </div>
 
             <div class="row schedule-item">
-              <div class="col-md-2"><time>11:00 AM</time></div>
+              <div class="col-md-2"><time>10:00 AM</time></div>
               <div class="col-md-10">
                 <div class="speaker">
-                  <img src="images/program/person.png" alt="speaker to define">
+                  <img src="images/program/person.png" alt="Mathieu Gilson, David Meunier, Ruggero Basanisi">
                 </div>
-                <h4>Introduction to BrainHack<span> - Speaker to define</span></h4>
-                <p>TBA</p>
+                <h4>Introduction to BrainHack<span> - Mathieu Gilson, David Meunier, Ruggero Basanisi</span></h4>
+                <p>Joint introduction to BrainHack Marseille and Lucca</p>
               </div>
             </div>
 
             <div class="row schedule-item">
-              <div class="col-md-2"><time>11:30 AM</time></div>
+              <div class="col-md-2"><time>10:30 AM</time></div>
               <div class="col-md-10">
                 <div class="speaker">
-                  <img src="images/program/training.gif" alt="Speaker to define">
+                  <img src="images/program/training.gif" alt="Julien Caugant">
                 </div>
-                <h4>Training session 1<span> - Speaker to define</span></h4>
-                <p>TBA</p>
+                <h4>Training session 1<span> - Julien Caugant</span></h4>
+                <p>Python basics</p>
               </div>
             </div>
 
             <div class="row schedule-item">
-              <div class="col-md-2"><time>12:15 AM</time></div>
+              <div class="col-md-2"><time>12:00 AM</time></div>
               <div class="col-md-10">
                 <div class="speaker">
                   <img src="images/program/training.gif" alt="Speaker to define">
@@ -327,7 +327,7 @@
                   <img src="images/program/lunch.jpg" alt="Buon Appetito">
                 </div>
                 <h4>Lunch Break</h4>
-                <p>Lunch will be served at ????</p>
+                <p>Lunch will be served at "Marameo"</p>
               </div>
             </div>
 
@@ -382,7 +382,7 @@
                   <img src="images/program/project.jpg" alt="Projects' Presentation">
                 </div>
                 <h4>Projects pitches<span> - Projects leaders</span></h4>
-                <p>TBA</p>
+                <p>Short projects presentations between Marseille and Lucca</p>
               </div>
             </div>
 
@@ -393,7 +393,7 @@
                   <img src="images/program/networking.gif" alt="Willow Trantow">
                 </div>
                 <h4>Social Night Event<span> - All the Brainhackers</span></h4>
-                <p>The social night event will be hosted in Sala Canova</p>
+                <p>The social night event will be hosted in IMT school</p>
               </div>
             </div>
 
@@ -404,7 +404,7 @@
           <div role="tabpanel" class="col-lg-9  tab-pane fade" id="day-2">
 
             <div class="row schedule-item">
-              <div class="col-md-2"><time>09:30 AM</time></div>
+              <div class="col-md-2"><time>09:00 AM</time></div>
               <div class="col-md-10">
                 <div class="speaker">
                   <img src="images/program/breakfast.jpg" alt="Breakfast">
@@ -415,13 +415,13 @@
             </div>
 
             <div class="row schedule-item">
-              <div class="col-md-2"><time>10:30 AM</time></div>
+              <div class="col-md-2"><time>09:30 AM</time></div>
               <div class="col-md-10">
                 <div class="speaker">
                   <img src="images/program/hack.gif" alt="Hack those brains!">
                 </div>
-                <h4>Hacking session<span> - Group Work</span></h4>
-                <p>Maiores dignissimos neque qui cum accusantium ut sit sint inventore.</p>
+                <h4>Hacking session<span> - Working groups</span></h4>
+                <p>Collective work on projects!</p>
               </div>
             </div>
 
@@ -432,7 +432,7 @@
                   <img src="images/program/lunch.jpg" alt="Buon Appetito">
                 </div>
                 <h4>Lunch Break</h4>
-                <p>Lunch will be served at ????</p>
+                <p>Lunch will be served at "Marameo"</p>
               </div>
             </div>
 
@@ -442,8 +442,8 @@
                 <div class="speaker">
                   <img src="images/program/hack.gif" alt="Hack those brains!">
                 </div>
-                <h4>Hacking session<span> - Group Work</span></h4>
-                <p>Maiores dignissimos neque qui cum accusantium ut sit sint inventore.</p>
+                <h4>Hacking session<span> - Working groups</span></h4>
+                <p>Collective work on projects!</p>
               </div>
             </div>
 
@@ -476,7 +476,7 @@
           <div role="tabpanel" class="col-lg-9  tab-pane fade" id="day-3">
 
             <div class="row schedule-item">
-              <div class="col-md-2"><time>09:30 AM</time></div>
+              <div class="col-md-2"><time>09:00 AM</time></div>
               <div class="col-md-10">
                 <div class="speaker">
                   <img src="images/program/breakfast.jpg" alt="Breakfast">
@@ -487,13 +487,13 @@
             </div>
 
             <div class="row schedule-item">
-              <div class="col-md-2"><time>10:30 AM</time></div>
+              <div class="col-md-2"><time>09:30 AM</time></div>
               <div class="col-md-10">
                 <div class="speaker">
                   <img src="images/program/hack.gif" alt="Hack those brains!">
                 </div>
-                <h4>Hacking session<span> - Group Work</span></h4>
-                <p>Maiores dignissimos neque qui cum accusantium ut sit sint inventore.</p>
+                <h4>Hacking session<span> - Working groups</span></h4>
+                <p>Collective work on projects!</p>
               </div>
             </div>
 
@@ -504,7 +504,7 @@
                   <img src="images/program/lunch.jpg" alt="Buon Appetito">
                 </div>
                 <h4>Lunch Break</h4>
-                <p>Lunch will be served at ????</p>
+                <p>Lunch will be served at "Marameo"<p>
               </div>
             </div>
 
@@ -515,7 +515,7 @@
                   <img src="images/program/hack.gif" alt="Hack those brains!">
                 </div>
                 <h4>Hacking session<span> - Group Work</span></h4>
-                <p>Maiores dignissimos neque qui cum accusantium ut sit sint inventore.</p>
+                <p>Collective work on projects!</p>
               </div>
             </div>
 
@@ -536,8 +536,8 @@
                 <div class="speaker">
                   <img src="images/program/project.jpg" alt="Speaker to define">
                 </div>
-                <h4>BrainHack Marseille Wrapup<span> - Projects Leaders</span></h4>
-                <p>TBA</p>
+                <h4>BrainHack Marseille Wrapup / BrainHack Lucca intermediate presentation<span> - Projects Leaders</span></h4>
+                <p>To share the results of BrainHack Marseille and the preliminar results of BrainHack Lucca</p>
               </div>
             </div>
 
@@ -548,7 +548,7 @@
           <div role="tabpanel" class="col-lg-9  tab-pane fade" id="day-4">
 
             <div class="row schedule-item">
-              <div class="col-md-2"><time>09:30 AM</time></div>
+              <div class="col-md-2"><time>09:00 AM</time></div>
               <div class="col-md-10">
                 <div class="speaker">
                   <img src="images/program/breakfast.jpg" alt="Breakfast">
@@ -559,13 +559,13 @@
             </div>
 
             <div class="row schedule-item">
-              <div class="col-md-2"><time>10:30 AM</time></div>
+              <div class="col-md-2"><time>09:30 AM</time></div>
               <div class="col-md-10">
                 <div class="speaker">
                   <img src="images/program/hack.gif" alt="Hack those brains!">
                 </div>
                 <h4>Hacking session<span> - Group Work</span></h4>
-                <p>Maiores dignissimos neque qui cum accusantium ut sit sint inventore.</p>
+                <p>Are you starting to getting tired? Don't give up!</p>
               </div>
             </div>
 
@@ -576,7 +576,7 @@
                   <img src="images/program/lunch.jpg" alt="Buon Appetito">
                 </div>
                 <h4>Lunch Break</h4>
-                <p>Lunch will be served at ????</p>
+                <p>Lunch will be served at "Marameo"</p>
               </div>
             </div>
 
@@ -587,7 +587,7 @@
                   <img src="images/program/hack.gif" alt="Hack those brains!">
                 </div>
                 <h4>Hacking session<span> - Group Work</span></h4>
-                <p>Maiores dignissimos neque qui cum accusantium ut sit sint inventore.</p>
+                <p>The last straight line!</p>
               </div>
             </div>
 
@@ -609,7 +609,7 @@
                   <img src="images/program/project.jpg" alt="Speaker to define">
                 </div>
                 <h4>BrainHack Lucca Wrapup<span> - Projects Leaders</span></h4>
-                <p>TBA</p>
+                <p>Presentation of the results of BrainHack Lucca projects.</p>
               </div>
             </div>
 
