--- a/index.html
+++ b/index.html
@@ -146,17 +146,17 @@
 
         <div class="row align-items-center justify-content-center">
 
-          <div class="col-xl-2 col-md-3 col-6 client-logo">
+          <!-- <div class="col-xl-2 col-md-3 col-6 client-logo">
             <a href="https://momilab.imtlucca.it/research/semper" target="_blank">
               <img src="images/contributors/semper.png" class="img-fluid" alt="SEMper">
             </a>
-          </div><!-- End Client Item -->
+          </div> --><!-- End Client Item -->
 
-          <div class="col-xl-2 col-md-3 col-6 client-logo">
+          <!-- <div class="col-xl-2 col-md-3 col-6 client-logo">
             <a href="https://momilab.imtlucca.it/research/space" target="_blank">
               <img src="images/contributors/space.png" class="img-fluid" alt="SPACE">
             </a>
-          </div><!-- End Client Item -->
+          </div> --><!-- End Client Item -->
 
           <!-- <div class="col-xl-2 col-md-3 col-6 client-logo">
             <img src="assets/img/clients/client-3.png" class="img-fluid" alt="">
