--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
           <b>PROGRAM IN PROGRESS</b><br>
           You can find the complete BrainHack Lucca program here.<br> <!--Insert PDF download-->
           The first day is dedicated to teaching, with training sessions on different open science tools.<br>
-          The next days will be focused on collaborative working (hacking sessions).
+          The following days will be focused on collaborative working (hacking sessions).
         </h3>
 
         <div class="tab-content row justify-content-center" data-aos="fade-up" data-aos-delay="200">
