--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
                   <img src="images/program/breakfast.jpg" alt="Welcoming, coffee and delicacies">
                 </div>
                 <h4>Registration and breakfast</h4>
-                <p>Badges at IMT school and coffee at ????</p>
+                <p>Badges at IMT school and coffee at 'La Pecora Nera'</p>
               </div>
             </div>
 
@@ -328,7 +328,7 @@
                   <img src="images/program/lunch.jpg" alt="Buon Appetito">
                 </div>
                 <h4>Lunch Break</h4>
-                <p>Lunch will be served at "Marameo"</p>
+                <p>Lunch will be served at 'Marameo'</p>
               </div>
             </div>
 
@@ -361,7 +361,7 @@
                   <img src="images/program/coffee_break.gif" alt="Willow Trantow">
                 </div>
                 <h4>Coffee Break<span></span></h4>
-                <p>Coffee Break will be served at ????</p>
+                <p>Coffee Break will be served at 'La Pecora Nera'</p>
               </div>
             </div>
 
@@ -411,7 +411,7 @@
                   <img src="images/program/breakfast.jpg" alt="Breakfast">
                 </div>
                 <h4>Breakfast</h4>
-                <p>Breakfast will be served at ????</p>
+                <p>Breakfast will be served at 'La Pecora Nera'</p>
               </div>
             </div>
 
@@ -433,7 +433,7 @@
                   <img src="images/program/lunch.jpg" alt="Buon Appetito">
                 </div>
                 <h4>Lunch Break</h4>
-                <p>Lunch will be served at "Marameo"</p>
+                <p>Lunch will be served at 'Marameo'</p>
               </div>
             </div>
 
@@ -455,7 +455,7 @@
                   <img src="images/program/coffee_break.gif" alt="Willow Trantow">
                 </div>
                 <h4>Coffee Break<span></span></h4>
-                <p>Coffee Break will be served at ????</p>
+                <p>Coffee Break will be served at 'La Pecora Nera'</p>
               </div>
             </div>
 
@@ -483,7 +483,7 @@
                   <img src="images/program/breakfast.jpg" alt="Breakfast">
                 </div>
                 <h4>Breakfast</h4>
-                <p>Breakfast will be served at ????</p>
+                <p>Breakfast will be served at 'La Pecora Nera'</p>
               </div>
             </div>
 
@@ -505,7 +505,7 @@
                   <img src="images/program/lunch.jpg" alt="Buon Appetito">
                 </div>
                 <h4>Lunch Break</h4>
-                <p>Lunch will be served at "Marameo"<p>
+                <p>Lunch will be served at 'Marameo'<p>
               </div>
             </div>
 
@@ -527,7 +527,7 @@
                   <img src="images/program/coffee_break.gif" alt="Willow Trantow">
                 </div>
                 <h4>Coffee Break<span></span></h4>
-                <p>Coffee Break will be served at ????</p>
+                <p>Coffee Break will be served at 'La Pecora Nera'</p>
               </div>
             </div>
 
@@ -577,7 +577,7 @@
                   <img src="images/program/lunch.jpg" alt="Buon Appetito">
                 </div>
                 <h4>Lunch Break</h4>
-                <p>Lunch will be served at "Marameo"</p>
+                <p>Lunch will be served at 'Marameo'</p>
               </div>
             </div>
 
